uvasds-services/templates/uvasds/id-generator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: id-generator-service
  namespace: uvasds-services
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-expose-headers: "X-Custom-Header"
    nginx.ingress.kubernetes.io/cors-max-age: "10"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  selector:
    app: id-generator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
